--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -7,7 +7,7 @@ app:
   # scenario. If the value is set to an empty string ("") the application
   # is not deployed.
   # KLP Buid ID
-  version: ""
+  version: "b3b2e2b6-569b-41a2-b779-0e5cc2811d57"
   
   # Set the Maven coordinates of the Maven artifact to deploy for the 
   # "Deploy, and run" scenario.
